@@ -1,3 +1,7 @@
+2005-05-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scripts/format-page.py (browser_language): clarify 
+
 2005-05-04  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* nl: recode latin1..utf-8 some files.
